--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
   - npm run build-prod
-
+  - echo "app.cyfan.top" > ./dist/CNAME
 deploy:
   provider: pages
   skip-cleanup: true
