--- a/src/data/apps.json
+++ b/src/data/apps.json
@@ -85,7 +85,7 @@
       "title": "网易云音乐",
       "slug": "音乐的力量",
       "subtitle": "黑胶破解",
-      "icon": "https://rmt.dogedoge.com/fetch/hi-c-oss/storage/20200920095440.png",
+      "icon": "music.163.com.png",
       "description": "音乐的力量",
       "price": "$0.00",
       "release_date": "2020-09-20T09:55:37",
